--- a/pages/9962.html
+++ b/pages/9962.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,11 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> |
+    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
+    <a href="/nlab/authors" title="Who wrote what">Authors</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
     <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -475,7 +475,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/finite+quantum+mechanics+in+terms+of+dagger-compact+categories'>in terms of †-compact categories</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/finite+quantum+mechanics+in+terms+of+dagger-compact+categories'>in terms of ∞-compact categories</a></p>
 </li>
 
 <li>
@@ -965,21 +965,21 @@ margin-left: 0em;
 <p>A key problem is arguably that the principle has been used in a very vague and very ambiguous sense. Even apart from the problem of which large or small numbers are to be regarded as “unlikely” (see the <a href='#WilsonOnNaturalness'>quote below</a> from <a href='#Wilson04'>Wilson 04</a>), there is technical fine print. An attempt to bring some clarity into the situation is in (<a href='#Clarke17'>Clarke 17</a>).</p>
 
 <blockquote>
-<p id='WilsonOnNaturalness'> <math class='maruku-mathml' display='inline' id='mathml_0bbccccc6ec63c0923572fee160ee15a45407afb_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo><mi>⋯</mi><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>[ \cdots ]</annotation></semantics></math> The claim was that it would be unnatural for such particles to have masses small enough to be detectable soon. But this claim makes no sense when one becomes familiar with the history of physics. There have been a number of cases where numbers arose that were unexpectedly small or large. An early example was the very large distance to the nearest star as compared to the distance to the Sun, as needed by Copernicus, because otherwise the nearest stars would have exhibited measurable parallax as the Earth moved around the Sun. Within elementary particle physics, one has unexpectedly large ratios of masses, such as the large ratio of the muon mass to the electron mass. There is also the very small value of the weak coupling constant. In the time since my paper was written, another set of unexpectedly small masses was discovered: the neutrino masses. There is also the riddle of dark energy in cosmology, with its implication of possibly an extremely small value for the cosmological constant in Einstein’s theory of general relativity. This blunder was potentially more serious, if it caused any subsequent researchers to dismiss possibilities for very large or very small values for parameters that now must be taken seriously.</p>
+<p id='WilsonOnNaturalness'> <math class='maruku-mathml' display='inline' id='mathml_c609cd08045f8f55e9af01231b2385fcfbcb8f7a_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo><mi>⋯</mi><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>[ \cdots ]</annotation></semantics></math> The claim was that it would be unnatural for such particles to have masses small enough to be detectable soon. But this claim makes no sense when one becomes familiar with the history of physics. There have been a number of cases where numbers arose that were unexpectedly small or large. An early example was the very large distance to the nearest star as compared to the distance to the Sun, as needed by Copernicus, because otherwise the nearest stars would have exhibited measurable parallax as the Earth moved around the Sun. Within elementary particle physics, one has unexpectedly large ratios of masses, such as the large ratio of the muon mass to the electron mass. There is also the very small value of the weak coupling constant. In the time since my paper was written, another set of unexpectedly small masses was discovered: the neutrino masses. There is also the riddle of dark energy in cosmology, with its implication of possibly an extremely small value for the cosmological constant in Einstein’s theory of general relativity. This blunder was potentially more serious, if it caused any subsequent researchers to dismiss possibilities for very large or very small values for parameters that now must be taken seriously.</p>
 
 <p>(<a href='#Wilson04'>Wilson 04, p. 10</a>)</p>
 </blockquote>
 
-<p id='Kane17'> From <a href='#Kane17'>Kane 17</a>, in a discussion of <a class='existingWikiWord' href='/nlab/show/G2-MSSM'>G2-MSSM</a> model building:</p>
+<p id='FromKane17'> From <a href='#Kane17'>Kane 17</a>, in a discussion of <a class='existingWikiWord' href='/nlab/show/G2-MSSM'>G2-MSSM</a> model building:</p>
 
 <blockquote>
-<p>Until recently there were no theories predicting the values of superpartner masses. The arguments based on ‘naturalness’ are basically like saying the weather tomorrow should be the same as today. The opposite of naturalness is having a theory. <math class='maruku-mathml' display='inline' id='mathml_0bbccccc6ec63c0923572fee160ee15a45407afb_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo></mrow><annotation encoding='application/x-tex'>[</annotation></semantics></math>…<math class='maruku-mathml' display='inline' id='mathml_0bbccccc6ec63c0923572fee160ee15a45407afb_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>]</annotation></semantics></math> Claims <math class='maruku-mathml' display='inline' id='mathml_0bbccccc6ec63c0923572fee160ee15a45407afb_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo></mrow><annotation encoding='application/x-tex'>[</annotation></semantics></math>superpartners<math class='maruku-mathml' display='inline' id='mathml_0bbccccc6ec63c0923572fee160ee15a45407afb_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>]</annotation></semantics></math> should have been seen would be valid given so called naturalness arguments, but are wrong in actual theories. Many of us think that is a misuse of the idea of naturalness, but it is the fashionable use.</p>
+<p>Until recently there were no theories predicting the values of superpartner masses. The arguments based on ‘naturalness’ are basically like saying the weather tomorrow should be the same as today. The opposite of naturalness is having a theory. <math class='maruku-mathml' display='inline' id='mathml_c609cd08045f8f55e9af01231b2385fcfbcb8f7a_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo></mrow><annotation encoding='application/x-tex'>[</annotation></semantics></math>…<math class='maruku-mathml' display='inline' id='mathml_c609cd08045f8f55e9af01231b2385fcfbcb8f7a_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>]</annotation></semantics></math> Claims <math class='maruku-mathml' display='inline' id='mathml_c609cd08045f8f55e9af01231b2385fcfbcb8f7a_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo></mrow><annotation encoding='application/x-tex'>[</annotation></semantics></math>superpartners<math class='maruku-mathml' display='inline' id='mathml_c609cd08045f8f55e9af01231b2385fcfbcb8f7a_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>]</annotation></semantics></math> should have been seen would be valid given so called naturalness arguments, but are wrong in actual theories. Many of us think that is a misuse of the idea of naturalness, but it is the fashionable use.</p>
 </blockquote>
 
 <p>(p. 33 (3-2))</p>
 
 <blockquote>
-<p>Some arguments (‘naturalness’) can be used to estimate what values <math class='maruku-mathml' display='inline' id='mathml_0bbccccc6ec63c0923572fee160ee15a45407afb_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo></mrow><annotation encoding='application/x-tex'>[</annotation></semantics></math>MSSM parameters<math class='maruku-mathml' display='inline' id='mathml_0bbccccc6ec63c0923572fee160ee15a45407afb_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>]</annotation></semantics></math> might have. If those arguments were correct some superpartners would already have been discovered at the CERN LHC. It would have been nice if the naturalness arguments had worked, but they did not. Since they were not predictions from a theory it is not clear how to interpret that.</p>
+<p>Some arguments (‘naturalness’) can be used to estimate what values <math class='maruku-mathml' display='inline' id='mathml_c609cd08045f8f55e9af01231b2385fcfbcb8f7a_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo></mrow><annotation encoding='application/x-tex'>[</annotation></semantics></math>MSSM parameters<math class='maruku-mathml' display='inline' id='mathml_c609cd08045f8f55e9af01231b2385fcfbcb8f7a_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>]</annotation></semantics></math> might have. If those arguments were correct some superpartners would already have been discovered at the CERN LHC. It would have been nice if the naturalness arguments had worked, but they did not. Since they were not predictions from a theory it is not clear how to interpret that.</p>
 </blockquote>
 
 <p>(p. 39 (4-3))</p>
@@ -1057,19 +1057,19 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on February 21, 2018 14:12:47 
+  Revised on April  3, 2018 11:12:36
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (91.230.41.206)
+  (94.220.90.187)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/naturalness" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/naturalness/13" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(13 revisions)</span> | <a href="/nlab/show/diff/naturalness" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/naturalness" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/naturalness" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/naturalness/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/naturalness" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/naturalness" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/naturalness" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/naturalness" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/naturalness" id="view_source" rel="nofollow">Source</a>
