--- a/pages/11192.html
+++ b/pages/11192.html
@@ -290,12 +290,13 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> |
+    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
+    <a href="/nlab/authors" title="Who wrote what">Authors</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
     <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8380/#Item_1" rel="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -1085,7 +1086,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/finite+quantum+mechanics+in+terms+of+dagger-compact+categories'>in terms of †-compact categories</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/finite+quantum+mechanics+in+terms+of+dagger-compact+categories'>in terms of ∞-compact categories</a></p>
 </li>
 
 <li>
@@ -1644,20 +1645,20 @@ margin-left: 0em;
 
 <h2 id='definition'>Definition</h2>
 
-<p>For <math class='maruku-mathml' display='inline' id='mathml_0275f0f2c2b160f0233aa7018d572e64a161307f_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>T</mi></mrow><annotation encoding='application/x-tex'>T</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/torus'>torus</a> and <math class='maruku-mathml' display='inline' id='mathml_0275f0f2c2b160f0233aa7018d572e64a161307f_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mover><mi>T</mi><mo stretchy='false'>˜</mo></mover></mrow><annotation encoding='application/x-tex'>\tilde T</annotation></semantics></math> its dual torus, there is the <a class='existingWikiWord' href='/nlab/show/cup+product'>cup product</a> <a class='existingWikiWord' href='/nlab/show/universal+characteristic+class'>universal characteristic class</a></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_0275f0f2c2b160f0233aa7018d572e64a161307f_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>⟨</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo>∪</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>⟩</mo><mspace width='thickmathspace'></mspace><mo lspace='verythinmathspace'>:</mo><mspace width='thickmathspace'></mspace><mi>B</mi><mi>T</mi><mo>×</mo><mi>B</mi><mover><mi>T</mi><mo stretchy='false'>˜</mo></mover><mo>⟶</mo><mi>K</mi><mo stretchy='false'>(</mo><mi>ℤ</mi><mo>,</mo><mn>4</mn><mo stretchy='false'>)</mo><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+<p>For <math class='maruku-mathml' display='inline' id='mathml_ece2ab6535aa68a0f80c8672c937d31d98297ebb_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>T</mi></mrow><annotation encoding='application/x-tex'>T</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/torus'>torus</a> and <math class='maruku-mathml' display='inline' id='mathml_ece2ab6535aa68a0f80c8672c937d31d98297ebb_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mover><mi>T</mi><mo stretchy='false'>˜</mo></mover></mrow><annotation encoding='application/x-tex'>\tilde T</annotation></semantics></math> its dual torus, there is the <a class='existingWikiWord' href='/nlab/show/cup+product'>cup product</a> <a class='existingWikiWord' href='/nlab/show/universal+characteristic+class'>universal characteristic class</a></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_ece2ab6535aa68a0f80c8672c937d31d98297ebb_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>⟨</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo>∪</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>⟩</mo><mspace width='thickmathspace'></mspace><mo lspace='verythinmathspace'>:</mo><mspace width='thickmathspace'></mspace><mi>B</mi><mi>T</mi><mo>×</mo><mi>B</mi><mover><mi>T</mi><mo stretchy='false'>˜</mo></mover><mo>⟶</mo><mi>K</mi><mo stretchy='false'>(</mo><mi>ℤ</mi><mo>,</mo><mn>4</mn><mo stretchy='false'>)</mo><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
   \langle -\cup -\rangle \;\colon\;B T \times B \tilde T \longrightarrow K(\mathbb{Z}, 4)
   \,.
 
 </annotation></semantics></math></div>
 <p>This has a smooth refinement to morphism of <a class='existingWikiWord' href='/nlab/show/smooth+groupoid'>smooth groupoids</a>/<a class='existingWikiWord' href='/nlab/show/moduli+stack'>moduli stacks</a></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_0275f0f2c2b160f0233aa7018d572e64a161307f_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>⟨</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo>∪</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>⟩</mo><mspace width='thickmathspace'></mspace><mo lspace='verythinmathspace'>:</mo><mspace width='thickmathspace'></mspace><mstyle mathvariant='bold'><mi>B</mi></mstyle><mi>T</mi><mo>×</mo><mstyle mathvariant='bold'><mi>B</mi></mstyle><mover><mi>T</mi><mo stretchy='false'>˜</mo></mover><mo>⟶</mo><msup><mstyle mathvariant='bold'><mi>B</mi></mstyle> <mn>3</mn></msup><mi>U</mi><mo stretchy='false'>(</mo><mn>1</mn><mo stretchy='false'>)</mo><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_ece2ab6535aa68a0f80c8672c937d31d98297ebb_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>⟨</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo>∪</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>⟩</mo><mspace width='thickmathspace'></mspace><mo lspace='verythinmathspace'>:</mo><mspace width='thickmathspace'></mspace><mstyle mathvariant='bold'><mi>B</mi></mstyle><mi>T</mi><mo>×</mo><mstyle mathvariant='bold'><mi>B</mi></mstyle><mover><mi>T</mi><mo stretchy='false'>˜</mo></mover><mo>⟶</mo><msup><mstyle mathvariant='bold'><mi>B</mi></mstyle> <mn>3</mn></msup><mi>U</mi><mo stretchy='false'>(</mo><mn>1</mn><mo stretchy='false'>)</mo><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
   \langle -\cup -\rangle \;\colon\;\mathbf{B} T \times \mathbf{B} \tilde T \longrightarrow \mathbf{B}^3 U(1)
   \,.
 
 </annotation></semantics></math></div>
 <p>In fact it has furthermore a differential refinement to a <a class='existingWikiWord' href='/nlab/show/universal+Chern-Simons+line+3-bundle'>universal Chern-Simons circle 3-bundle with connection</a></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_0275f0f2c2b160f0233aa7018d572e64a161307f_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>⟨</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo>∪</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><msub><mo stretchy='false'>⟩</mo> <mi>conn</mi></msub><mspace width='thickmathspace'></mspace><mo lspace='verythinmathspace'>:</mo><mspace width='thickmathspace'></mspace><mo stretchy='false'>(</mo><mstyle mathvariant='bold'><mi>B</mi></mstyle><mi>T</mi><mo>×</mo><mstyle mathvariant='bold'><mi>B</mi></mstyle><mover><mi>T</mi><mo stretchy='false'>˜</mo></mover><msub><mo stretchy='false'>)</mo> <mi>conn</mi></msub><mo>⟶</mo><msup><mstyle mathvariant='bold'><mi>B</mi></mstyle> <mn>3</mn></msup><mi>U</mi><mo stretchy='false'>(</mo><mn>1</mn><msub><mo stretchy='false'>)</mo> <mi>conn</mi></msub></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_ece2ab6535aa68a0f80c8672c937d31d98297ebb_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>⟨</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo>∪</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><msub><mo stretchy='false'>⟩</mo> <mi>conn</mi></msub><mspace width='thickmathspace'></mspace><mo lspace='verythinmathspace'>:</mo><mspace width='thickmathspace'></mspace><mo stretchy='false'>(</mo><mstyle mathvariant='bold'><mi>B</mi></mstyle><mi>T</mi><mo>×</mo><mstyle mathvariant='bold'><mi>B</mi></mstyle><mover><mi>T</mi><mo stretchy='false'>˜</mo></mover><msub><mo stretchy='false'>)</mo> <mi>conn</mi></msub><mo>⟶</mo><msup><mstyle mathvariant='bold'><mi>B</mi></mstyle> <mn>3</mn></msup><mi>U</mi><mo stretchy='false'>(</mo><mn>1</mn><msub><mo stretchy='false'>)</mo> <mi>conn</mi></msub></mrow><annotation encoding='application/x-tex'>
   \langle -\cup -\rangle_{conn} \;\colon\;(\mathbf{B} T \times \mathbf{B} \tilde T)_{conn} \longrightarrow \mathbf{B}^3 U(1)_{conn}
 
 </annotation></semantics></math></div>
@@ -1665,8 +1666,8 @@ margin-left: 0em;
 
 <p>As such this is the <a class='existingWikiWord' href='/nlab/show/Lagrangian+density'>local Lagrangian</a> of abelian <a class='existingWikiWord' href='/nlab/show/Chern-Simons+theory'>Chern-Simons theory</a> with two abelian gauge field species (the <a class='existingWikiWord' href='/nlab/show/diagonal+morphism'>diagonal</a> is 3d abelian CS theory itself).</p>
 
-<p>This universal class is suitably equivariant under the action of the integral T-duality group <math class='maruku-mathml' display='inline' id='mathml_0275f0f2c2b160f0233aa7018d572e64a161307f_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>O</mi><mo stretchy='false'>(</mo><mi>n</mi><mo>,</mo><mi>n</mi><mo>,</mo><mi>ℤ</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>O(n,n,\mathbb{Z})</annotation></semantics></math>, so that one may consider (<a href='#Nikolaus14'>Nikolaus 14</a>)</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_0275f0f2c2b160f0233aa7018d572e64a161307f_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>⟨</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo>∪</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>⟩</mo><mspace width='thickmathspace'></mspace><mo lspace='verythinmathspace'>:</mo><mspace width='thickmathspace'></mspace><mstyle mathvariant='bold'><mi>B</mi></mstyle><mi>T</mi><mo>×</mo><mstyle mathvariant='bold'><mi>B</mi></mstyle><mover><mi>T</mi><mo stretchy='false'>˜</mo></mover><mo stretchy='false'>/</mo><mo stretchy='false'>/</mo><mi>O</mi><mo stretchy='false'>(</mo><mi>n</mi><mo>,</mo><mi>n</mi><mo>,</mo><mi>ℤ</mi><mo stretchy='false'>)</mo><mo>⟶</mo><msup><mstyle mathvariant='bold'><mi>B</mi></mstyle> <mn>3</mn></msup><mi>U</mi><mo stretchy='false'>(</mo><mn>1</mn><mo stretchy='false'>)</mo><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+<p>This universal class is suitably equivariant under the action of the integral T-duality group <math class='maruku-mathml' display='inline' id='mathml_ece2ab6535aa68a0f80c8672c937d31d98297ebb_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>O</mi><mo stretchy='false'>(</mo><mi>n</mi><mo>,</mo><mi>n</mi><mo>,</mo><mi>ℤ</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>O(n,n,\mathbb{Z})</annotation></semantics></math>, so that one may consider (<a href='#Nikolaus14'>Nikolaus 14</a>)</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_ece2ab6535aa68a0f80c8672c937d31d98297ebb_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>⟨</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo>∪</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>⟩</mo><mspace width='thickmathspace'></mspace><mo lspace='verythinmathspace'>:</mo><mspace width='thickmathspace'></mspace><mstyle mathvariant='bold'><mi>B</mi></mstyle><mi>T</mi><mo>×</mo><mstyle mathvariant='bold'><mi>B</mi></mstyle><mover><mi>T</mi><mo stretchy='false'>˜</mo></mover><mo stretchy='false'>/</mo><mo stretchy='false'>/</mo><mi>O</mi><mo stretchy='false'>(</mo><mi>n</mi><mo>,</mo><mi>n</mi><mo>,</mo><mi>ℤ</mi><mo stretchy='false'>)</mo><mo>⟶</mo><msup><mstyle mathvariant='bold'><mi>B</mi></mstyle> <mn>3</mn></msup><mi>U</mi><mo stretchy='false'>(</mo><mn>1</mn><mo stretchy='false'>)</mo><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
   \langle -\cup -\rangle \;\colon\;\mathbf{B} T \times \mathbf{B} \tilde T // O(n,n,\mathbb{Z}) \longrightarrow \mathbf{B}^3 U(1)
   \,.
 
@@ -1683,27 +1684,29 @@ margin-left: 0em;
 <li id='Nikolaus14'>
 <p><a class='existingWikiWord' href='/nlab/show/Thomas+Nikolaus'>Thomas Nikolaus</a>, <em><a class='existingWikiWord' href='/nlab/show/T-Duality+in+K-theory+and+Elliptic+Cohomology'>T-Duality in K-theory and Elliptic Cohomology</a></em>, talk at <em>String Geometry Network Meeting</em>, Feb 2014, ESI Vienna (<a href='http://www.ingvet.kau.se/juerfuch/conf/esi14/esi14_34.html'>website</a>)</p>
 </li>
-</ul>
 
-<p>
+<li id='NikolausWaldorf18'>
+<p><a class='existingWikiWord' href='/nlab/show/Thomas+Nikolaus'>Thomas Nikolaus</a>, <a class='existingWikiWord' href='/nlab/show/Konrad+Waldorf'>Konrad Waldorf</a>, <em>Higher geometry for non-geometric T-duals</em> (<a href='https://arxiv.org/abs/1804.00677'>arXiv:1804.00677</a>) 
  
 </p>
+</li>
+</ul>
 </div>
 
 <div class="revisedby">
-  Revised on January  5, 2018 08:40:45 
+  Revised on April  4, 2018 04:47:00
   by <a class="existingWikiWord" href="/nlab/show/David+Corfield">David Corfield</a>
-  (147.147.173.215)
+  (129.12.18.176)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/T-duality+2-group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/T-duality+2-group/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/T-duality+2-group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/T-duality+2-group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/T-duality+2-group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/T-duality+2-group/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/T-duality+2-group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/T-duality+2-group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/T-duality+2-group" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/T-duality+2-group" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/T-duality+2-group" id="view_source" rel="nofollow">Source</a>
