--- a/pages/6879.html
+++ b/pages/6879.html
@@ -290,12 +290,10 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/3243/#Item_1" rel="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -899,12 +897,18 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#examples'>Examples</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
 <p>A <a class='existingWikiWord' href='/nlab/show/classical+field+theory'>classical field theory</a> with <a class='existingWikiWord' href='/nlab/show/action+functional'>action functional</a> having the standard kinetic term non-derivative interactions has stable, time-independent solutions where all fields are constant on a value that is a local minimum of the interaction term potential energy (if any).</p>
 
 <p>In the corresponding <a class='existingWikiWord' href='/nlab/show/quantum+field+theory'>quantum field theory</a>, however, a state that is initially concentrated this way on a local minimum which is not also a global minimum is not time-independent, but will exhibit <span class='newWikiWord'>quantum tunneling<a href='/nlab/new/quantum+tunneling'>?</a></span> behaviour by which the fields “tunnel” through the local potential barrier into the global minimum. Therefore one speaks of a <em>false <a class='existingWikiWord' href='/nlab/show/vacuum'>vacuum</a></em> in this case.</p>
+
+<h2 id='examples'>Examples</h2>
+
+<ul>
+<li><a href='Higgs+field#MassAndVacuumInstability'>Higgs field – Mass and Vacuum (in-)stability</a></li>
+</ul>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -981,19 +985,19 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on April  1, 2018 15:01:50 
+  Revised on April  5, 2018 04:50:53
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (94.220.90.187)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/false+vacuum" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/false+vacuum/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/false+vacuum" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/false+vacuum" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/false+vacuum" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/false+vacuum/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/false+vacuum" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/false+vacuum" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/false+vacuum" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/false+vacuum" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/false+vacuum" id="view_source" rel="nofollow">Source</a>
