--- a/pages/2682.html
+++ b/pages/2682.html
@@ -290,12 +290,10 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/262/#Item_3" rel="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -616,7 +614,7 @@ margin-left: 0em;
 
 <p>One widely studied class of modli-stabilized solutions to the string-theory background equations is that of <strong><a class='existingWikiWord' href='/nlab/show/flux+compactification'>flux compactifications</a></strong>.</p>
 
-<p>These are classical solutions to the corresponding <a class='existingWikiWord' href='/nlab/show/supergravity'>supergravity</a> theory that are of the form <math class='maruku-mathml' display='inline' id='mathml_eab3e5916339ac8deba0d217c0939bc367d3daf4_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>M</mi> <mn>4</mn></msup><mo>×</mo><mi>CY</mi></mrow><annotation encoding='application/x-tex'>M^4 \times CY</annotation></semantics></math> with <math class='maruku-mathml' display='inline' id='mathml_eab3e5916339ac8deba0d217c0939bc367d3daf4_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>CY</mi></mrow><annotation encoding='application/x-tex'>CY</annotation></semantics></math> some <a class='existingWikiWord' href='/nlab/show/Calabi-Yau+variety'>Calabi-Yau manifold</a> of six real dimensions such that the <a class='existingWikiWord' href='/nlab/show/RR+field'>RR-field</a> in the solution has nontrivial values on <math class='maruku-mathml' display='inline' id='mathml_eab3e5916339ac8deba0d217c0939bc367d3daf4_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>CY</mi></mrow><annotation encoding='application/x-tex'>CY</annotation></semantics></math>. Its components are called the <em><a class='existingWikiWord' href='/nlab/show/flux'>fluxes</a></em> .</p>
+<p>These are classical solutions to the corresponding <a class='existingWikiWord' href='/nlab/show/supergravity'>supergravity</a> theory that are of the form <math class='maruku-mathml' display='inline' id='mathml_dd18e24792f32a7fb892951f8c3e0dfc5c2ede09_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>M</mi> <mn>4</mn></msup><mo>×</mo><mi>CY</mi></mrow><annotation encoding='application/x-tex'>M^4 \times CY</annotation></semantics></math> with <math class='maruku-mathml' display='inline' id='mathml_dd18e24792f32a7fb892951f8c3e0dfc5c2ede09_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>CY</mi></mrow><annotation encoding='application/x-tex'>CY</annotation></semantics></math> some <a class='existingWikiWord' href='/nlab/show/Calabi-Yau+variety'>Calabi-Yau manifold</a> of six real dimensions such that the <a class='existingWikiWord' href='/nlab/show/RR+field'>RR-field</a> in the solution has nontrivial values on <math class='maruku-mathml' display='inline' id='mathml_dd18e24792f32a7fb892951f8c3e0dfc5c2ede09_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>CY</mi></mrow><annotation encoding='application/x-tex'>CY</annotation></semantics></math>. Its components are called the <em><a class='existingWikiWord' href='/nlab/show/flux'>fluxes</a></em> .</p>
 
 <p>The presence of this <a class='existingWikiWord' href='/nlab/show/RR+field'>RR-field</a> in the solution induces an effective potential for the scalar moduli fields that parameterize the geometry of CY. Hence by choosing the <a class='existingWikiWord' href='/nlab/show/RR+field'>RR-field</a> suitably one can find classical solutions in which all these moduli have values that are constant in time.</p>
 
@@ -781,7 +779,7 @@ margin-left: 0em;
 <p>See also</p>
 
 <ul>
-<li>
+<li id='BrennanCartaVafa17'>
 <p>T. Daniel Brennan, Federico Carta, <a class='existingWikiWord' href='/nlab/show/Cumrun+Vafa'>Cumrun Vafa</a>, <em>The String Landscape, the Swampland, and the Missing Corner</em> (<a href='https://arxiv.org/abs/1711.00864'>arXiv:1711.00864</a>)</p>
 </li>
 
@@ -836,7 +834,7 @@ margin-left: 0em;
 
 <p>The articles <a href='#LercheLustSchellekens86'>Lerche-Lüst-Schellekens 86</a>, <a href='#LercheLustSchellekens87'>Lerche-Lüst-Schellekens 87</a>, and the speech <a href='#Schellekens98'>Schellekens 98</a>, did not cause much of excitement then. Also they did not discuss <a class='existingWikiWord' href='/nlab/show/moduli+stabilization'>moduli stabilization</a>, which could still have been thought to reduce the number of vacua. Excitement was only later caused instead by more vague discussion of flux compactification vacua with moduli stabilization in type IIB string theory:</p>
 
-<p>That there are <math class='maruku-mathml' display='inline' id='mathml_eab3e5916339ac8deba0d217c0939bc367d3daf4_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>10</mn> <mi>hundreds</mi></msup></mrow><annotation encoding='application/x-tex'>10^{hundreds}</annotation></semantics></math> different flux compactifications was maybe first said explicitly in</p>
+<p>That there are <math class='maruku-mathml' display='inline' id='mathml_dd18e24792f32a7fb892951f8c3e0dfc5c2ede09_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>10</mn> <mi>hundreds</mi></msup></mrow><annotation encoding='application/x-tex'>10^{hundreds}</annotation></semantics></math> different flux compactifications was maybe first said explicitly in</p>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/Raphael+Bousso'>Raphael Bousso</a>, <a class='existingWikiWord' href='/nlab/show/Joseph+Polchinski'>Joseph Polchinski</a>, <em>Quantization of Four-form Fluxes and Dynamical Neutralization of the Cosmological Constant</em> (<a href='http://arxiv.org/abs/hep-th/0004134'>arXiv:hep-th/0004134</a>)</li>
@@ -851,6 +849,8 @@ margin-left: 0em;
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/Shamit+Kachru'>Shamit Kachru</a>, <a class='existingWikiWord' href='/nlab/show/Renata+Kallosh'>Renata Kallosh</a>, <a class='existingWikiWord' href='/nlab/show/Andrei+Linde'>Andrei Linde</a>, <a class='existingWikiWord' href='/nlab/show/Sandip+Trivedi'>Sandip Trivedi</a>, <em>de Sitter Vacua in String Theory</em>, Phys. Rev. D68:046005, 2003 (<a href='http://arxiv.org/abs/hep-th/0301240'>arXiv:hep-th/0301240</a>)</p>
+
+<p>(“KKLT”, a good quick review is in <a href='#DanielssonVanRiet18'>Danielsson-VanRiet 18 section 2.5.1</a>)</p>
 </li>
 
 <li>
@@ -858,7 +858,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<p>The specific (but arbitrary) value “<math class='maruku-mathml' display='inline' id='mathml_eab3e5916339ac8deba0d217c0939bc367d3daf4_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>10</mn> <mn>500</mn></msup></mrow><annotation encoding='application/x-tex'>10^{500}</annotation></semantics></math>” for the typical number of flux compactification, which became iconic in public discussion of the issue, originates in</p>
+<p>The specific (but arbitrary) value “<math class='maruku-mathml' display='inline' id='mathml_dd18e24792f32a7fb892951f8c3e0dfc5c2ede09_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>10</mn> <mn>500</mn></msup></mrow><annotation encoding='application/x-tex'>10^{500}</annotation></semantics></math>” for the typical number of flux compactification, which became iconic in public discussion of the issue, originates in</p>
 
 <ul>
 <li id='Douglas04'>
@@ -876,7 +876,7 @@ margin-left: 0em;
 <li><a class='existingWikiWord' href='/nlab/show/Suyay+Ashok'>Suyay Ashok</a>, <a class='existingWikiWord' href='/nlab/show/Michael+Douglas'>Michael Douglas</a>, <em>Counting flux vacua</em>, JHEP, vol. 0401, p. 060, 2004</li>
 </ul>
 
-<p>had considered <math class='maruku-mathml' display='inline' id='mathml_eab3e5916339ac8deba0d217c0939bc367d3daf4_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>10</mn> <mn>120</mn></msup></mrow><annotation encoding='application/x-tex'>10^{120}</annotation></semantics></math> and earlier <a href='#LercheLustSchellekens87'>Lerche-Lüst-Schellekens 87</a> had <math class='maruku-mathml' display='inline' id='mathml_eab3e5916339ac8deba0d217c0939bc367d3daf4_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>10</mn> <mn>1500</mn></msup></mrow><annotation encoding='application/x-tex'>10^{1500}</annotation></semantics></math>.</p>
+<p>had considered <math class='maruku-mathml' display='inline' id='mathml_dd18e24792f32a7fb892951f8c3e0dfc5c2ede09_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>10</mn> <mn>120</mn></msup></mrow><annotation encoding='application/x-tex'>10^{120}</annotation></semantics></math> and earlier <a href='#LercheLustSchellekens87'>Lerche-Lüst-Schellekens 87</a> had <math class='maruku-mathml' display='inline' id='mathml_dd18e24792f32a7fb892951f8c3e0dfc5c2ede09_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>10</mn> <mn>1500</mn></msup></mrow><annotation encoding='application/x-tex'>10^{1500}</annotation></semantics></math>.</p>
 
 <p>A review of the issue of flux compactifications is in</p>
 
@@ -899,22 +899,38 @@ margin-left: 0em;
 </ul>
 
 <p>For more on this see the references at <em><a class='existingWikiWord' href='/nlab/show/multiverse'>multiverse</a></em> and <em><a class='existingWikiWord' href='/nlab/show/chaotic+cosmic+inflation'>eternal inflation</a></em>.</p>
+
+<p>On the other hand, discussion casting doubt on the existence of a large number of <a class='existingWikiWord' href='/nlab/show/de+Sitter+spacetime'>de Sitter spacetime</a> <a class='existingWikiWord' href='/nlab/show/perturbative+string+theory+vacuum'>perturbative string theory vacua</a> includes the following:</p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Tom+Banks'>Tom Banks</a>, <em>The Top <math class='maruku-mathml' display='inline' id='mathml_dd18e24792f32a7fb892951f8c3e0dfc5c2ede09_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>10</mn> <mn>500</mn></msup></mrow><annotation encoding='application/x-tex'>10^{500}</annotation></semantics></math> Reasons Not to Believe in the Landscape</em> (<a href='https://arxiv.org/abs/1208.5715'>arXiv:1208.5715</a>)</p>
+</li>
+
+<li>
+<p><a href='#BrennanCartaVafa17'>Brennan-Carta-Vafa 17</a></p>
+</li>
+
+<li id='DanielssonVanRiet18'>
+<p><a class='existingWikiWord' href='/nlab/show/Ulf+Danielsson'>Ulf Danielsson</a>, Thomas Van Riet, <em>What if string theory has no de Sitter vacua?</em> (<a href='https://arxiv.org/abs/1804.01120'>arXiv:1804.01120</a>)</p>
+</li>
+</ul>
 </div>
 
 <div class="revisedby">
-  Revised on February 27, 2018 04:16:03 
+  Revised on April  5, 2018 08:32:30
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (195.229.110.1)
+  (94.220.90.187)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/landscape+of+string+theory+vacua" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/landscape+of+string+theory+vacua/31" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(31 revisions)</span> | <a href="/nlab/show/diff/landscape+of+string+theory+vacua" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/landscape+of+string+theory+vacua" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/landscape+of+string+theory+vacua" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/landscape+of+string+theory+vacua/32" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(32 revisions)</span> | <a href="/nlab/show/diff/landscape+of+string+theory+vacua" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/landscape+of+string+theory+vacua" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/landscape+of+string+theory+vacua" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/landscape+of+string+theory+vacua" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/landscape+of+string+theory+vacua" id="view_source" rel="nofollow">Source</a>
