--- a/pages/1737.html
+++ b/pages/1737.html
@@ -290,12 +290,10 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/4185/#Item_9" rel="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -326,7 +324,7 @@ margin-left: 0em;
 <p><a class='existingWikiWord' href='/nlab/show/judgment'>hypothetical judgement</a>, <a class='existingWikiWord' href='/nlab/show/sequent'>sequent</a></p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/antecedent'>antecedents</a> <math class='maruku-mathml' display='inline' id='mathml_d4208a6c9fe7263b3aa3fc018af24b4f8c4dce4a_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊢</mo></mrow><annotation encoding='application/x-tex'>\vdash</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/consequent'>consequent</a>, <a class='existingWikiWord' href='/nlab/show/succedent'>succedents</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/antecedent'>antecedents</a> <math class='maruku-mathml' display='inline' id='mathml_fe2d86964a212f2f03a789caafe0a27a1d9efc92_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊢</mo></mrow><annotation encoding='application/x-tex'>\vdash</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/consequent'>consequent</a>, <a class='existingWikiWord' href='/nlab/show/succedent'>succedents</a></li>
 </ul>
 </li>
 </ul>
@@ -611,7 +609,7 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_pages'>Related pages</a></li><li><a href='#some_theoretical_computer_scientists'>Some (theoretical) computer scientists</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>Computer science studies <a class='existingWikiWord' href='/nlab/show/program'>programs</a> and languages to express them, as well as the operation, application and design of computers. This includes aspects relating to <a class='existingWikiWord' href='/nlab/show/models+for+concurrency'>concurrency</a>, <a class='existingWikiWord' href='/nlab/show/semantics'>semantics</a> of <a class='existingWikiWord' href='/nlab/show/programming+language'>programming languages</a>, and aspects of <a class='existingWikiWord' href='/nlab/show/mathematical+logic'>mathematical logic</a>.</p>
+<p>Computer science studies <a class='existingWikiWord' href='/nlab/show/program'>programs</a> and languages to express them, as well as the operation, application and design of computers and computer networks. This includes aspects relating to <a class='existingWikiWord' href='/nlab/show/models+for+concurrency'>concurrency</a>, <a class='existingWikiWord' href='/nlab/show/semantics'>semantics</a> of <a class='existingWikiWord' href='/nlab/show/programming+language'>programming languages</a>, and aspects of <a class='existingWikiWord' href='/nlab/show/mathematical+logic'>mathematical logic</a>.</p>
 
 <p>From the <a class='existingWikiWord' href='/nlab/show/nPOV'>nPOV</a>, computer science is part of the <a class='existingWikiWord' href='/nlab/show/computational+trinitarianism'>computational trinity</a>, together with <a class='existingWikiWord' href='/nlab/show/type+theory'>type theory</a> and <a class='existingWikiWord' href='/nlab/show/category+theory'>category theory</a>. Maybe <em>programming theory</em> would have been a good term for computer science (to match with its siblings). But it’s not used this way, more’s the pity.</p>
 
@@ -768,7 +766,7 @@ http://www.cs.unibo.it/~asperti/PAPERS/book.pdf'>online</a>.)</p>
 
 <p><a href='http://www.lmcs-online.org/ojs/about.php'>Logical Methods in Computer Science</a> is an open access journal for papers on Theoretical Computer Science and other areas of Computer Science in which logical methods play a large part.</p>
 
-<p><div class='property'> category: <a class='category_link' href='/nlab/list/computer+science'>computer science</a></div></p>
+<p><div class='property'> category: <a class='category_link' href='/nlab/list/computer+science'>computer science</a></div> <div class='property'> category: <a class='category_link' href='/nlab/list/software'>software</a></div></p>
 
 <p>
  
@@ -776,19 +774,19 @@ http://www.cs.unibo.it/~asperti/PAPERS/book.pdf'>online</a>.)</p>
 </div>
 
 <div class="revisedby">
-  Revised on January 12, 2018 14:09:50 
-  by <a class="existingWikiWord" href="/nlab/show/AnonymousCoward">Anonymous</a>
-  (156.199.37.165)
+  Revised on April  5, 2018 10:58:47
+  by <a class="existingWikiWord" href="/nlab/show/Zoran+%C5%A0koda">Zoran Škoda</a>
+  (161.53.28.4)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/computer+science" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/computer+science/18" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(18 revisions)</span> | <a href="/nlab/show/diff/computer+science" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/computer+science" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/computer+science" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/computer+science/19" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(19 revisions)</span> | <a href="/nlab/show/diff/computer+science" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/computer+science" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/computer+science" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/computer+science" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/computer+science" id="view_source" rel="nofollow">Source</a>
