--- a/pages/3919.html
+++ b/pages/3919.html
@@ -1033,12 +1033,12 @@ margin-left: 0em;
 <p><a class='existingWikiWord' href='/nlab/show/Freeman+Dyson'>Freeman Dyson</a> <em>Missed opportunities</em>, Bulletin of the AMS, Volume 78, Number 5, September 1972 (<a href='https://www.math.uh.edu/~tomforde/Articles/Missed-Opportunities-Dyson.pdf'>pdf</a>)</p>
 
 <blockquote>
-<p><math class='maruku-mathml' display='inline' id='mathml_b1315df2ad0234c401917108bc978275a6b693c4_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo></mrow><annotation encoding='application/x-tex'>[</annotation></semantics></math> the <a class='existingWikiWord' href='/nlab/show/Haag-Kastler+axioms'>Haag-Kastler axioms</a> <math class='maruku-mathml' display='inline' id='mathml_b1315df2ad0234c401917108bc978275a6b693c4_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>]</annotation></semantics></math> taken together with the axioms defining a C<em>-algebra are a distillation into abstract mathematical language of all the general truths that we have learned about the physics of microscopic systems during the last 50 years. They describe a mathematical structure of great elegance whose properties correspond in many respects to the facts of experimental physics. In some sense, the axioms represent the most serious attempt that has yet been made to define precisely what physicists mean by the words “observability, causality, locality, relativisti invariance,” which they are constantly using or abusing in their everyday speech. <math class='maruku-mathml' display='inline' id='mathml_b1315df2ad0234c401917108bc978275a6b693c4_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo></mrow><annotation encoding='application/x-tex'>[</annotation></semantics></math>…<math class='maruku-mathml' display='inline' id='mathml_b1315df2ad0234c401917108bc978275a6b693c4_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>]</annotation></semantics></math> I therefore propose as an outstanding opportunity still open to the pure mathematicians, to create a mathematical structure preserving the main features of the Haag-Kastler axioms but possessing E-invariance instead of P-invariance.</em></p>
+<p><math class='maruku-mathml' display='inline' id='mathml_4f9dd5f46e467a7739088239639b4cabcdafbf0a_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo></mrow><annotation encoding='application/x-tex'>[</annotation></semantics></math> the <a class='existingWikiWord' href='/nlab/show/Haag-Kastler+axioms'>Haag-Kastler axioms</a> <math class='maruku-mathml' display='inline' id='mathml_4f9dd5f46e467a7739088239639b4cabcdafbf0a_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>]</annotation></semantics></math> taken together with the axioms defining a C<em>-algebra are a distillation into abstract mathematical language of all the general truths that we have learned about the physics of microscopic systems during the last 50 years. They describe a mathematical structure of great elegance whose properties correspond in many respects to the facts of experimental physics. In some sense, the axioms represent the most serious attempt that has yet been made to define precisely what physicists mean by the words “observability, causality, locality, relativistic invariance,” which they are constantly using or abusing in their everyday speech. <math class='maruku-mathml' display='inline' id='mathml_4f9dd5f46e467a7739088239639b4cabcdafbf0a_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo></mrow><annotation encoding='application/x-tex'>[</annotation></semantics></math>…<math class='maruku-mathml' display='inline' id='mathml_4f9dd5f46e467a7739088239639b4cabcdafbf0a_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>]</annotation></semantics></math> I therefore propose as an outstanding opportunity still open to the pure mathematicians, to create a mathematical structure preserving the main features of the Haag-Kastler axioms but possessing E-invariance instead of P-invariance.</em></p>
 </blockquote>
 </li>
 </ul>
 
-<p>Gereneral accounts of (perturbative, algebraic) quantum field theory on curved spacetimes includes</p>
+<p>General accounts of (perturbative, algebraic) quantum field theory on curved spacetimes include</p>
 
 <ul>
 <li>
@@ -1165,15 +1165,15 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on April  6, 2018 19:28:01
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (84.60.231.111).
-  See <a href="https://ncatlab.org/nlab/author/Urs Schreiber" style="color: #005c19">Author — Urs Schreiber</a> for an overview of the nLab pages to which Urs Schreiber has contributed.
+  Revised on April  7, 2018 02:45:57
+  by <a class="existingWikiWord" href="/nlab/show/David+Corfield">David Corfield</a>
+  (147.147.173.215).
+  See <a href="https://ncatlab.org/nlab/author/David Corfield" style="color: #005c19">Author — David Corfield</a> for an overview of the nLab pages to which David Corfield has contributed.
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/AQFT+on+curved+spacetimes" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/AQFT+on+curved+spacetimes/18" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(18 revisions)</span> | <a href="/nlab/show/diff/AQFT+on+curved+spacetimes" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/AQFT+on+curved+spacetimes" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/AQFT+on+curved+spacetimes" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/AQFT+on+curved+spacetimes/19" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(19 revisions)</span> | <a href="/nlab/show/diff/AQFT+on+curved+spacetimes" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/AQFT+on+curved+spacetimes" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
 
   <span class="views">
     | Views:
